# Eurio

./: .gitignore  .mcp.json  CLAUDE.md  PRD.md  Taskfile.yml  flake.nix  set-coins-train.txt  settings.gradle.kts  yolo_shell.nix
ml/: README.md  Taskfile.yml  add_backgrounds.py  api_quota.py  api_quota_cli.py  augment_synthetic.py  batch_fetch_images.py  batch_match_numista.py  bootstrap_circulation.py  bootstrap_circulation_de.py  bootstrap_design_groups.py  bootstrap_referential.py  check_real_photos.py  class_resolver.py  clean_referential.py  compute_embeddings.py  confusion_map.py  debug.keystore  ebay_client.py  enrich_coins_metadata.py  enrich_from_numista.py  eurio_referential.py  evaluate.py  evaluate_real_photos.py  export_catalog_snapshot.py  export_tflite.py  generate_overlay_textures.py  import_numista.py  measure_photo_meta.py  merge_coin_datasets.py  numista_keys.py  prepare_dataset.py  preview_augmentations.py  pyproject.toml  real_photo_meta.py  rename_to_numista_ids.py  review_core.py  review_queue_server.py  scrape_bce_images.py  scrape_ebay.py  (+15 more)
ml/.task/checksum/: prepare
ml/api/: augmentation_routes.py  benchmark_routes.py  coin_lookup.py  iteration_logic.py  iteration_runner.py  lab_routes.py  server.py  sources_aggregator.py  sources_routes.py  supabase_client.py  training_runner.py
ml/augmentations/: __init__.py  background.py  base.py  overlays.py  perspective.py  pipeline.py  recipes.py  relighting.py
ml/bootstrap/: bootstrap_circulation.py  bootstrap_circulation_de.py  bootstrap_design_groups.py  bootstrap_referential.py  migrate_storage_layout.py  rename_to_numista_ids.py  seed_sets.py  seed_supabase.py
ml/cache/: confusion_map_status.json  dinov2_embeddings_dinov2-vits14.npz
ml/data/: coin_series_seed.json  design_groups_seed.json
ml/data/overlays/: .gitignore  README.md
ml/datasets/: coin_catalog.json  country_mapping.json  eurio_referential.json  manual_resolutions.json  matching_log.jsonl  numista_manual_resolutions.json  numista_review_queue.json  review_queue.json
ml/datasets/eurio-poc/: class_manifest.json
ml/datasets/sources/: bce_comm_2004_2026-04-13.html  bce_comm_2004_2026-04-26.html  bce_comm_2004_2026-04-27.html  bce_comm_2005_2026-04-13.html  bce_comm_2005_2026-04-26.html  bce_comm_2005_2026-04-27.html  bce_comm_2006_2026-04-13.html  bce_comm_2006_2026-04-26.html  bce_comm_2006_2026-04-27.html  bce_comm_2007_2026-04-13.html  bce_comm_2007_2026-04-26.html  bce_comm_2007_2026-04-27.html  bce_comm_2008_2026-04-13.html  bce_comm_2008_2026-04-26.html  bce_comm_2008_2026-04-27.html  bce_comm_2009_2026-04-13.html  bce_comm_2009_2026-04-26.html  bce_comm_2009_2026-04-27.html  bce_comm_2010_2026-04-13.html  bce_comm_2010_2026-04-26.html  bce_comm_2010_2026-04-27.html  bce_comm_2011_2026-04-13.html  bce_comm_2011_2026-04-26.html  bce_comm_2011_2026-04-27.html  bce_comm_2012_2026-04-13.html  bce_comm_2012_2026-04-26.html  bce_comm_2012_2026-04-27.html  bce_comm_2013_2026-04-13.html  bce_comm_2013_2026-04-26.html  bce_comm_2013_2026-04-27.html  (+66 more)
ml/eurio_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/eval/: check_real_photos.py  class_resolver.py  confusion_map.py  evaluate.py  evaluate_real_photos.py  matching.py  preview_augmentations.py  visualize.py
ml/export/: export_catalog_snapshot.py  sync_to_supabase.py
ml/ib/: ebay-market-prices.md  sources-admin-page.md
ml/market/: ebay_client.py  scrape_ebay.py
ml/referential/: batch_fetch_images.py  batch_match_numista.py  bootstrap_design_groups_2eur.py  clean_referential.py  coin_image_storage.py  enrich_coins_metadata.py  enrich_from_numista.py  eurio_referential.py  fetch_bce_images.py  fetch_review_images.py  import_numista.py  merge_coin_datasets.py  numista_keys.py  review_core.py  review_queue_server.py  scrape_bce_images.py  scrape_lmdlp.py  scrape_monnaiedeparis.py  verify_review_queue.py
ml/scan/: diff_kotlin_python.py  eval_real_snaps.py  normalize_snap.py  preview_normalized.py  sync_eval_real.py
ml/state/: __init__.py  archive.py  schema.sql  sources_runs.json  sources_runs.py  store.py
ml/tests/: _utils.py  bench_normalize.py  measure_parity_baseline.py  parity_dataset.yaml  parity_test.py  test_augmentation.py  test_augmentation_api.py  test_benchmark.py  test_benchmark_api.py  test_ebay.py  test_ebay_aggregate.py  test_ebay_item.py  test_eurio_referential.py  test_lab.py  test_lab_api.py  test_normalize_dispatch.py
ml/training/: add_backgrounds.py  augment_synthetic.py  coin_dataset.py  compute_embeddings.py  export_tflite.py  generate_overlay_textures.py  prepare_dataset.py  run_onnx2tf.py  setup_detection_dataset.py  train_detector.py  train_embedder.py  validate_export.py  validate_per_class.py  zone_resolver.py
(+4414 files in other folders)
