[project]
name = "eurio-ml"
version = "0.1.0"
requires-python = ">=3.12"
# Deps that are NOT in the Nix devShell (or that we want PyPI-resolved per
# platform — torch/torchvision below). Everything else (numpy, pillow,
# fastapi, uvicorn, scikit-learn, matplotlib, httpx…) is provided by the
# devShell and reaches the venv via include-system-site-packages = true.
dependencies = [
  "opencv-python-headless",
  "pytorch-metric-learning",
  "torch",
  "torchvision",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["referential*", "market*", "export*", "training*", "eval*", "bootstrap*", "api*", "augmentations*", "scan*", "state*", "tests*"]

# Top-level modules (single .py files at ml/ root). setuptools.packages.find
# only picks up packages, so any new sibling .py needs to be listed here too
# or it won't be importable through the editable install.
[tool.setuptools]
py-modules = ["api_quota", "api_quota_cli"]

# Per-platform torch source. Linux x86_64 → CUDA 12.1 wheel (1080ti = compute
# 6.1, supported). Other platforms (notably macOS arm64) fall through to PyPI
# default, which ships MPS-enabled wheels. Marker is evaluated at install time
# by uv, so a single `uv pip install -e .` does the right thing on each host.
[tool.uv.sources]
torch       = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]

[[tool.uv.index]]
name     = "pytorch-cu121"
url      = "https://download.pytorch.org/whl/cu121"
explicit = true
